--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.vsspt</groupId>
    <artifactId>security-service</artifactId>
-   <version>1.0.0</version>
+   <version>1.0.0-SNAPSHOT</version>
    <name>Security Service</name>
    <packaging>pom</packaging>
    <url>https://github.com/vsspt/Security-Service</url>
@@ -160,7 +160,7 @@
       <profile>
          <id>release</id>
          <activation>
-            <activeByDefault>false</activeByDefault>
+            <activeByDefault>true</activeByDefault>
          </activation>
          <build>
             <plugins>
