--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.vsspt</groupId>
    <artifactId>security-service</artifactId>
-   <version>1.0.0-SNAPSHOT</version>
+   <version>1.0.0</version>
    <name>Security Service</name>
    <packaging>pom</packaging>
    <url>https://github.com/vsspt/Security-Service</url>
@@ -56,7 +56,8 @@
       <connection>scm:git:https://github.com/vsspt/Security-Service.git</connection>
       <url>scm:git:https://github.com/vsspt/Security-Service.git</url>
       <developerConnection>scm:git:https://github.com/vsspt/Security-Service.git</developerConnection>
-   </scm>
+     <tag>security-service-1.0.0</tag>
+  </scm>
    <developers>
       <developer>
          <name>VSS PT</name>
