--- a/service/pom.xml
+++ b/service/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
 	<groupId>com.github.vsspt</groupId>  
 	<artifactId>security-service</artifactId>
@@ -8,7 +7,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>security-service-hibernate-impl</artifactId>
-  <version>1.0</version>
+  <version>1.0.0</version>
   <name>Security Component</name>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -95,6 +94,10 @@
 		<scope>test</scope>
 	  </dependency>	  
   </dependencies>
+
+  <scm>
+    <tag>security-service-1.0.0</tag>
+  </scm>
 </project>
 
 
