[maven-release-plugin] prepare release hibernate-security-service

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -96,7 +96,7 @@
   </dependencies>
 
   <scm>
-    <tag>security-service-1.0.0</tag>
+    <tag>hibernate-security-service</tag>
   </scm>
 </project>
 
