--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.vsspt</groupId>
    <artifactId>security-service</artifactId>
-   <version>1.0.0-SNAPSHOT</version>
+   <version>1.0.0</version>
    <name>Hibernate Security Service</name>
    <description>A implementation using Hibernate of a security table structure</description>
    <packaging>pom</packaging>
@@ -57,7 +57,7 @@
       <connection>scm:git:https://github.com/vsspt/hibernate-security-service.git</connection>
       <url>scm:git:https://github.com/vsspt/hibernate-security-service.git</url>
       <developerConnection>scm:git:https://github.com/vsspt/hibernate-security-service.git</developerConnection>
-     <tag>security-service-1.0.0</tag>
+     <tag>security-service-hibernate-1.0.0</tag>
   </scm>
    <developers>
       <developer>
