--- a/schema/pom.xml
+++ b/schema/pom.xml
@@ -4,7 +4,7 @@
    <parent>
 	<groupId>com.github.vsspt</groupId>  
 	<artifactId>security-service</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
    <artifactId>security-service-schema</artifactId>
    <version>1.0.0</version>
@@ -69,6 +69,6 @@
    </build>
 
   <scm>
-    <tag>security-service-1.0.0</tag>
+    <tag>security-service-hibernate-1.0.0</tag>
   </scm>
 </project>
